--- a/public/css/app.css
+++ b/public/css/app.css
@@ -57,6 +57,66 @@ input:focus {
   color:none;
 }
 
+/* Invoice table  */
+
+.table_create input {
+  border: 1px solid gray;
+  border-radius: 5px;
+  opacity: 0.8;
+}
+
+.invoice_table {
+  color: #212529;
+  text-align: left;    
+}
+
+.invoice_table p {
+  margin-bottom: 1rem;
+}
+
+.invoice_table .table {
+  width: 100%;
+  margin-bottom: 1rem;
+}
+.invoice_table .table th,
+.invoice_table .table td {
+  padding: 0.75rem;
+}
+.invoice_table .table.table-items td {
+  border-top: 1px solid #dee2e6;
+}
+
+.invoice_table .mt-5 {
+  margin-top: 3rem !important;
+}
+.invoice_table .pr-0,
+.invoice_table .px-0 {
+  padding-right: 0 !important;
+}
+.invoice_table .pl-0,
+.invoice_table .px-0 {
+  padding-left: 0 !important;
+  text-align: left;
+}
+
+.invoice_table {
+  font-family: "DejaVu Sans";
+}
+.invoice_table h1, h2, h3, h4, h5, h6, table, th, tr, td, p, div {
+  line-height: 1.1;
+}
+.invoice_table .party-header {
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+.invoice_table .total-amount {
+  font-weight: 700;
+}
+.invoice_table .border-0 {
+  border: none !important;
+}
+ 
+
 
 
 /**
